--- a/ApiDiff.Tests/ApiDiff.Tests.csproj
+++ b/ApiDiff.Tests/ApiDiff.Tests.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\ApiDiff\ApiDiff.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
